--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
         </form>
       </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid" style="height: 100vh;">
       <%= yield %>
     </div>
   </body>
