--- a/app/views/home/student_index.html.erb
+++ b/app/views/home/student_index.html.erb
@@ -1,1 +1,41 @@
-student home page
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3 profile"  >
+      <div class='card card-profile text-center' >
+        <div class='card-block'>
+          <img alt='' class='card-img-profile' src='https://png.pngtree.com/element_origin_min_pic/16/08/28/1157c25b04bc51f.jpg' width="140">
+          <h4 class='card-title'>
+            <%= current_user.name%><br/>
+            <small><%= current_user.classroom.grade%></small>
+          </h4>
+          <div class='card-links'>
+            <a class='fa fa-dribbble' href='#'></a>
+            <a class='fa fa-twitter' href='#'></a>
+            <a class='fa fa-facebook' href='#'></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-6" style="background-color:#f4f4f4; ">
+      <% @subjects.each do |subject|%>
+        <% subject.questions.each do |question|%>
+          <div class="card question">
+            <div class="card-header">
+              <%= question.subject.name%>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><%=question.title%></h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        <%end%>  
+      <%end%>
+    </div>
+    <div class="col-3 affix">
+      new question
+    </div>
+    
+  </div>
+</div>
+
