--- a/app/views/home/student_index.html.erb
+++ b/app/views/home/student_index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-3 profile"  >
+    <div class="col-2 profile"  >
       <div class='card card-profile text-center mt-3' >
         <div class='card-block'>
           <img alt='' class='card-img-profile' src='https://png.pngtree.com/element_origin_min_pic/16/08/28/1157c25b04bc51f.jpg' width="140">
@@ -33,8 +33,35 @@
         <%end%>  
       <%end%>
     </div>
-    <div class="col-3 affix">
-      new question
+    <div class="col-4" style="padding-right: 0px;">
+      <div class="card mt-3">
+            <div class="card-header">
+              <label class="pull-left">New Question</label>
+            </div>
+            <div class="card-body">
+              <form action="/question" method="post">
+                <div class="form-group">
+                  <label for="exampleFormControlSelect1">Subject:</label>
+                  <select class="form-control" id="exampleFormControlSelect1" name="question[subject_id]">
+                    <option value="">Select Subject </option>
+                    <% @subjects.each do |subject|%>
+                      <option value="<%=subject.id%>"><%= subject.name%></option>
+                    <%end%>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label> Title:</label>
+                  <input type="text" name="question[title]" placeholder="Question title" class="form-control">
+                </div>
+                <div class="form-group">  
+                  <label>Body:</label>
+                  <textarea rows="10" class="form-control" placeholder="Post your question here" name="question[body]"></textarea>
+                </div>
+                 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+                <button type="submit" class="btn btn-success">Post Question</button>
+              </form>
+            </div>
+          </div>
     </div>
     
   </div>
