css changed in form

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -18,3 +18,13 @@ body {
 .question{
   margin: 10px 0px 10px 0px;
 }
+
+.btn-question-submit{
+  background-color: #563d7c;
+  border-color: black;
+}
+
+.btn-question-submit:hover{
+  background-color: #281743;
+  border-color: black;
+}
