--- a/app/views/home/student_index.html.erb
+++ b/app/views/home/student_index.html.erb
@@ -2,16 +2,16 @@
   <div class="row">
     <div class="col-2 profile"  >
       <div class='card card-profile text-center mt-3' >
-        <div class='card-block'>
+        <div class='card-block' style="background-color: #563d7c">
           <img alt='' class='card-img-profile' src='https://png.pngtree.com/element_origin_min_pic/16/08/28/1157c25b04bc51f.jpg' width="140">
-          <h4 class='card-title'>
+          <h4 class='card-title'  style="color: white">
             <%= current_user.name%><br/>
             <small><%= current_user.classroom.grade%></small>
           </h4>
           <div class='card-links'>
-            <a class='fa fa-dribbble' href='#'></a>
-            <a class='fa fa-twitter' href='#'></a>
-            <a class='fa fa-facebook' href='#'></a>
+            <a class='fa fa-dribbble' href='#' style="color: white"></a>
+            <a class='fa fa-twitter' href='#' style="color: white"></a>
+            <a class='fa fa-facebook' href='#' style="color: white"></a>
           </div>
         </div>
       </div>
@@ -35,14 +35,14 @@
     </div>
     <div class="col-4" style="padding-right: 0px;">
       <div class="card mt-3">
-            <div class="card-header">
+            <div class="card-header" style="background-color: #563d7c; color: white;">
               <label class="pull-left">New Question</label>
             </div>
-            <div class="card-body">
+            <div class="card-body" style="background-color: #d7d5d9">
               <form action="/question" method="post">
                 <div class="form-group">
                   <label for="exampleFormControlSelect1">Subject:</label>
-                  <select class="form-control" id="exampleFormControlSelect1" name="question[subject_id]">
+                  <select class="form-control" id="exampleFormControlSelect1" name="question[subject_id]" required>
                     <option value="">Select Subject </option>
                     <% @subjects.each do |subject|%>
                       <option value="<%=subject.id%>"><%= subject.name%></option>
@@ -51,14 +51,14 @@
                 </div>
                 <div class="form-group">
                   <label> Title:</label>
-                  <input type="text" name="question[title]" placeholder="Question title" class="form-control">
+                  <input type="text" name="question[title]" placeholder="Question title" class="form-control" required>
                 </div>
                 <div class="form-group">  
                   <label>Body:</label>
-                  <textarea rows="10" class="form-control" placeholder="Post your question here" name="question[body]"></textarea>
+                  <textarea rows="10" class="form-control" placeholder="Post your question here" name="question[body]" required></textarea>
                 </div>
                  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-                <button type="submit" class="btn btn-success">Post Question</button>
+                <button type="submit" class="btn btn-success btn-question-submit">Post Question</button>
               </form>
             </div>
           </div>
