--- a/app/views/home/student_index.html.erb
+++ b/app/views/home/student_index.html.erb
@@ -16,7 +16,7 @@
         </div>
       </div>
     </div>
-    <div class="col-6" style="background-color:#f4f4f4; ">
+    <div class="col-6" style="background-color:white ">
       <% @subjects.each do |subject|%>
         <% subject.questions.each do |question|%>
           <div class="card question">
@@ -34,7 +34,7 @@
       <%end%>
     </div>
     <div class="col-4" style="padding-right: 0px;">
-      <div class="card mt-3">
+      <div class="card mt-3" style="border: 1px solid #918f8f">
             <div class="card-header" style="background-color: #563d7c; color: white;">
               <label class="pull-left">New Question</label>
             </div>
