--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
         </form>
       </div>
     </nav>
-    <div class="container-fluid" style="height: 100vh;">
+    <div class="container-fluid" style=" background-color: #d7d5d9" >
       <%= yield %>
     </div>
    <script>(function(d, s, id) {
