--- a/app/views/question/show.html.erb
+++ b/app/views/question/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container mt-5">
+<div class="container" style="height: 100vh;">
   <div class="row">
     
-    <div class="col-12">
+    <div class="col-12 mt-5">
       <h2><%= @question.title%></h2>
       <label>by: <%= @question.user.name%></label> <br/>
       <label>posted on: <%=@question.created_at%></label>
