--- a/app/views/home/student_index.html.erb
+++ b/app/views/home/student_index.html.erb
@@ -17,6 +17,16 @@
       </div>
     </div>
     <div class="col-6" style="background-color:white ">
+      <%if flash[:notice]%>
+        <div class="alert alert-primary" role="alert">
+         <%= flash[:notice]%>
+        </div>
+      <%end%>
+      <%if flash[:error]%>
+      <div class="alert alert-danger" role="alert">
+        <%= flash[:error]%>
+      </div>
+      <%end%>
       <% @subjects.each do |subject|%>
         <% subject.questions.each do |question|%>
           <div class="card question">
