--- a/app/views/question/show.html.erb
+++ b/app/views/question/show.html.erb
@@ -15,9 +15,21 @@
     </div>
     <div class="col-12">
       <h3>Answer</h3>
-      <p>
-        <%= @question.answer.nil? ? 'This question has not been answer yet' : @question.answer %>
-      </p>
+      <% if current_user.role=="student"%>
+        <p>
+          <%= @question.answer.nil? ? 'This question has not been answer yet' : @question.answer %>
+        </p>
+      <%end%>
+      <%if current_user.role=="teacher"%>
+        <form>
+          <div class="form-group">
+            <textarea rows="10" placeholder="Give an answer" class="form-control"></textarea>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Submit Answer</button>
+          </div>
+        </form>
+      <%end%>
     </div>
 
     <div class="col-12" style="height: 200px">
