--- a/app/views/question/show.html.erb
+++ b/app/views/question/show.html.erb
@@ -21,14 +21,14 @@
         </p>
       <%end%>
       <%if current_user.role=="teacher"%>
-        <form>
+        <%= form_for(:question, :url => question_path(@question), :method=> 'put') do |f| %>
           <div class="form-group">
-            <textarea rows="10" placeholder="Give an answer" class="form-control"></textarea>
+            <%= f.text_area :answer , size: '30x10', class: 'form-control' %>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit Answer</button>
+            <button type="submit" class="btn btn-primary">Submit Answer</button> 
           </div>
-        </form>
+        <% end %>
       <%end%>
     </div>
 
