--- a/app/views/home/teacher_index.html.erb
+++ b/app/views/home/teacher_index.html.erb
@@ -17,8 +17,8 @@
           </h4>
           <div class='card-links'>
             <a class='fa fa-dribbble' href='#' style="color: white"></a>
-            <a class='fa fa-twitter' href='#' style="color: white"></a>
-            <a class='fa fa-facebook' href='#' style="color: white"></a>
+            <a class='fa fa-twitter' href='www.twitter.com' style="color: white"></a>
+            <a class='fa fa-facebook' href='www.facebook.com' style="color: white"></a>
           </div>
         </div>
       </div>
