--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body id="fb-root">
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #563d7c" >
-      <a class="navbar-brand" href="#">ASKMe</a>
+      <a class="navbar-brand" href="#">AskMe</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,7 +22,6 @@
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
