--- a/app/views/question/show.html.erb
+++ b/app/views/question/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="height: 100vh;">
+<div class="container" style="height: 100%;">
   <div class="row">
     
     <div class="col-12 mt-5">
