--- a/app/views/question/show.html.erb
+++ b/app/views/question/show.html.erb
@@ -23,7 +23,7 @@
       <%if current_user.role=="teacher"%>
         <%= form_for(:question, :url => question_path(@question), :method=> 'put') do |f| %>
           <div class="form-group">
-            <%= f.text_area :answer , size: '30x10', class: 'form-control' %>
+            <%= f.text_area :answer , size: '30x10', class: 'form-control', placeholder: 'Give your answer here.' %>
           </div>
           <div class="form-group">
             <button type="submit" class="btn btn-primary">Submit Answer</button> 
